k8s-artifacts/proxy-aws-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-aws-proxy
  namespace: domino-compute
  labels:
    app: mlflow-aws-proxy
    tt: t
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-aws-proxy
  template:
    metadata:
      labels:
        app: mlflow-aws-proxy
    spec:
      containers:
        - name: mlflow-aws-proxy
          image: quay.io/wadkars/mock-jit:awsv5
          ports:
            - containerPort: 6010
